--- a/TheLastBastion/Config/DefaultInput.ini
+++ b/TheLastBastion/Config/DefaultInput.ini
@@ -80,7 +80,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 -ActionMappings=(ActionName="Command_Forward",Key=Three,bShift=False,bCtrl=True,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Command_Backward",Key=Four,bShift=False,bCtrl=True,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Command_Reform",Key=Two,bShift=False,bCtrl=True,bAlt=False,bCmd=False)
--ActionMappings=(ActionName="Command_Distribute",Key=Six,bShift=False,bCtrl=True,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="Command_Distribute",Key=Five,bShift=False,bCtrl=True,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="SelectedCrew_1",Key=Left,bShift=False,bCtrl=True,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="SelectedCrew_2",Key=Right,bShift=False,bCtrl=True,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="SelectedCrew_3",Key=Up,bShift=False,bCtrl=True,bAlt=False,bCmd=False)
@@ -92,6 +92,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 -ActionMappings=(ActionName="Skill_4",Key=One,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Skill_5",Key=Two,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -ActionMappings=(ActionName="Skill_7",Key=Three,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="OpenTradeMenu",Key=M,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
+-ActionMappings=(ActionName="OpenRecruitMenu",Key=None,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=SpaceBar,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Jump",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Sprint",Key=LeftShift,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
@@ -125,6 +127,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Skill_4",Key=One,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Skill_5",Key=Two,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Skill_7",Key=Three,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="OpenTradeMenu",Key=M,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="OpenRecruitMenu",Key=M,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 -AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 -AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 -AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftY,Scale=1.000000)
